--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=betamvc
+spring.mvc.view.prefix=/WEB_INF/jsp/
+spring.mvc.view.suffix=.jsp
+#/betamvc/src/main/resources/META-INF/resource/WEB_INF/jsp/sayHello.jsp
+#/myfirstwebapp/src/main/resources/META-INF/resources/WEB_INF/jsp/sayHello.jsp
+#\src\main\resources\META-INF\resources\WEB_INF\jsp\sayHello.jsp
