--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.mvc.view.suffix=.jsp
 #/betamvc/src/main/resources/META-INF/resource/WEB_INF/jsp/sayHello.jsp
 #/myfirstwebapp/src/main/resources/META-INF/resources/WEB_INF/jsp/sayHello.jsp
 #\src\main\resources\META-INF\resources\WEB_INF\jsp\sayHello.jsp
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mycus://localhost:3306/customers
+spring.datasource.username=cus-user
+spring.datasource.password=tiennguyen
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+#docker run --detach --env MYSQL_ROOT_PASSWORD=tiennguyen --env MYSQL_USER=cus-user --env MYSQL_PASSWORD=admin --env MYSQL_DATABASE=customers --name mycus --publish 3306:3306 mysql:8-oracle
